// Original file: exa/reactive_component_pb/reactive_component.proto

import type { MapKeyDiff as _exa_reactive_component_pb_MapKeyDiff, MapKeyDiff__Output as _exa_reactive_component_pb_MapKeyDiff__Output } from '../../exa/reactive_component_pb/MapKeyDiff';

export interface MapDiff {
  'mapKeyDiffs'?: (_exa_reactive_component_pb_MapKeyDiff)[];
}

export interface MapDiff__Output {
  'mapKeyDiffs': (_exa_reactive_component_pb_MapKeyDiff__Output)[];
}
