// Original file: exa/reactive_component_pb/reactive_component.proto

import type { FieldDiff as _exa_reactive_component_pb_FieldDiff, FieldDiff__Output as _exa_reactive_component_pb_FieldDiff__Output } from '../../exa/reactive_component_pb/FieldDiff';

export interface MessageDiff {
  'fieldDiffs'?: (_exa_reactive_component_pb_FieldDiff)[];
}

export interface MessageDiff__Output {
  'fieldDiffs': (_exa_reactive_component_pb_FieldDiff__Output)[];
}
